# base-python-boilerplate-backend

./: .env-sample  Makefile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/actions/docker-compose-run/: action.yml
.github/actions/docker-compose-setup/: action.yml
.github/actions/docker-compose-start/: action.yml
.github/actions/docker-compose-stop/: action.yml
.github/workflows/: ci.yml  pipeline-ci.yml
apps/stock/: admin.py  apps.py
apps/stock/api/: urls.py
apps/stock/api/serializers/: __init__.py  category_serializers.py  product_serializers.py
apps/stock/api/viewsets/: __init__.py  (+2 more)
apps/stock/fixtures/: 000_category.json  001_product.json
apps/stock/forms/: __init__.py  category_form.py  product_form.py
apps/stock/migrations/: 0001_initial.py  0002_alter_product_name.py  0003_alter_category_name.py
apps/stock/models/: category.py  product.py
conf/docker/: Dockerfile  docker-compose.base.yml
conf/docker/scripts/: runner.sh
conf/docker/services/: celery.sh  gunicorn.sh  migration.sh
conf/docker/validators/: sentry_config.py
core/cli/: mixins.py
core/models/: entity_model.py
core/models/mixins/: __init__.py  activable_mixin.py  auditable_mixin.py  datetime_management_mixin.py  deletable_mixin.py  domain_ruler_mixin.py  uuid_pk_mixin.py
core/serializers/: form_serializer_mixin.py
core/viewsets/: field_request_viewset_mixin.py
locale/en_us/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
project/: celery.py  settings.py  urls.py
project/fixtures/: 000_site.json  001_user.json
(+11 files in other folders)
